--- a/client/src/app/auth/login/login.component.html
+++ b/client/src/app/auth/login/login.component.html
@@ -1,16 +1,18 @@
 <div class="container">
-  <form class="form-signin" [formGroup]="loginForm" (ngSubmit)="onSubmit()" novalidate>
+  <form class="form-signin" [formGroup]="loginForm" (ngSubmit)="onSubmit()" >
     <h1 class="h3 mb-3 font-weight-normal">Please Sign in</h1>
     <div class="form-group">
       <label for="inputUsername" class="sr-only">Username</label>
       <input type="text" id="inputUsername" class="form-control" formControlName="username"
              placeholder="Username" required="true" autofocus="">
     </div>
+    <br>
     <div class="form-group">
       <label for="inputPassword" class="sr-only">Password</label>
       <input type="password" id="inputPassword" class="form-control" formControlName="password"
              placeholder="Password" required="true">
     </div>
+    <br>
     <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
   </form>
 </div>
