--- a/client/src/app/header/header.component.html
+++ b/client/src/app/header/header.component.html
@@ -4,7 +4,12 @@
       <div class="col-md-6">
         <h1><a href="" class="title"> Mo Mo Blog</a></h1>
       </div>
-      <div class="col-md-6">
+
+      <div class="col-md-3" *ngIf="authSvc.isAuthenticated()">
+        <a href="/add-post" class="new-post"> Add Post</a>
+        <button class="logout btn btn-default" (click)="logout()">Logout</button>
+      </div>
+      <div class="col-md-3" *ngIf="authSvc.isAuthenticated()">
         <a href="/login" class="login btn btn-default">Login</a>
         <a href="/register" class="register btn btn-default">Register</a>
       </div>
