--- a/client/src/app/post/post.component.html
+++ b/client/src/app/post/post.component.html
@@ -10,6 +10,9 @@
         <hr>
         <p [innerHTML]="post.content"></p>
       </div>
+      <div>
+        <a type="button" href="/" class="btn btn-default">back</a>
+      </div>
     </div>
   </div>
 </div>
