--- a/client/src/app/add-post/add-post.component.html
+++ b/client/src/app/add-post/add-post.component.html
@@ -9,10 +9,11 @@
         <label class = "post-title">Title</label>
         <input type="text" class="form-control" formControlName="title" placeholder="Title">
       </div>
+      <br>
       <div class="form-group">
         <label class="post-content">Content</label>
-<!--        <editor apiKey="3aj1kyuhus8kaaie5c541luqnax3xq6x3dyrci1cjxrtemqt" formControlName="content" [init]="{plugins:'link'}"></editor>-->
-        <input type="text" class="form-control" formControlName="content" >
+        <editor apiKey="" formControlName="content" [init]="{plugins:'link'}"></editor>
+<!--        <input type="text" class="form-control" formControlName="content" >-->
       </div>
       <div class="form-group">
         <button type="submit" class="btn btn-primary">Post</button>
