--- a/client/src/app/header/header.component.html
+++ b/client/src/app/header/header.component.html
@@ -2,14 +2,34 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-        <h1><a href="" class="title"> Mo Mo Blog</a></h1>
+        <h1><a href="" class="title"> Post As You Like </a></h1>
+      </div>
+      <div class="row">
+        <div clas="'col-md-3">
+          <h5>Location: {{city | uppercase}}</h5>
+          <table>
+            <tr>
+              <td>
+                <img src="http://openweathermap.org/img/wn/{{weather.icon}}@2x.png" alt="">
+              </td>
+              <td>
+                <div >
+                  Weather: {{weather.main}} {{weather.description}}
+                </div>
+                <div>
+                  Temperature: {{weather.temperature}}
+                </div>
+              </td>
+            </tr>
+          </table>
+        </div>
       </div>
 
       <div class="col-md-3" *ngIf="authSvc.isAuthenticated()">
         <a href="/add-post" class="new-post"> Add Post</a>
         <button class="logout btn btn-default" (click)="logout()">Logout</button>
       </div>
-      <div class="col-md-3" *ngIf="authSvc.isAuthenticated()">
+      <div class="col-md-3" >
         <a href="/login" class="login btn btn-default">Login</a>
         <a href="/register" class="register btn btn-default">Register</a>
       </div>
