--- a/client/src/app/post/post.component.html
+++ b/client/src/app/post/post.component.html
@@ -1,17 +1,16 @@
 <div class="content">
   <div class="container">
     <div class="row">
-      <div class="col-md-1"></div>
-      <div class="col-md-8">
+
+      <div class="col-md-6">
         <h1 class="blog-title">{{post.title}}</h1>
-        <span>
-          <p>by {{post.username}}</p>
+        <span font-style="italic">
+          <p>Post by {{post.username}}</p>
         </span>
         <hr>
         <p [innerHTML]="post.content"></p>
-      </div>
-      <div>
-        <a type="button" href="/" class="btn btn-default">back</a>
+
+        <a type="button" href="/" class="blog-title">back</a>
       </div>
     </div>
   </div>
